# Ningyo-Discord-Bot

./: .env.template  Cargo.toml  Readme.md
src/: main.rs
src/commands/: command_handler.rs  command_registry.rs  hello.rs  mod.rs  ping.rs  tax.rs
src/handlers/: interaction_handler.rs  message_handler.rs  mod.rs
